# flexidns

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  flexidns.logrotate  flexidns.service  pyproject.toml  requirements.txt  setup.py  命令记录.txt
docs/guide/zh-CN/: command.md  config.md
src/: flexidns  get_version.py
src/FlexiDNS/: SpeedTest.py  __init__.py  cacheoperate.py  command.py  dnscache.py  dnscli.py  dnsclient.py  dnsdownload.py  dnslog.py  dnslrucache.py  dnsmain.py  dnsmmap_ipc.py  dnspickle.py  dnspkg.py  dnsrules_new.py  dnsserver.py  dnstoml.py  dnsttlout.py  dnsupstream.py  tomlconfigure.py  version.py
src/etc/flexidns/: config.toml
src/etc/flexidns/list/: anti-ad-domains.txt  apple-cn.txt  cloudflare.txt  cn-all.txt  cn-ipv6.txt  direct-list.txt  fakeip.txt  fallback_exclude.txt  gfw.txt  gfwtest.txt  greatfire.txt  hosts  ipv4.txt  proxy-list.txt  reject-list.txt  telegram.txt
tests/: __init__.py  dnslrucache-test.py  dnsrules-test.py  import_path.py  rules.ipynb  test_command.py  test_dnscache.py  test_dnsmmap.py  test_dnsrules.py  test_flexidns.py  test_lrucache.py  test_tomlconfigure.py  tomlconfigure-test.py  utest.py
