
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "FlexiDNS"
dynamic = ["version", "readme"]
authors = [{ name = "GuoCL", email = "author@example.com" }]
description = "a dns server in python"
license = { "text" = "GPL License" }
requires-python = ">=3.11"
classifiers = [
    'Programming Language :: Python :: 3.11',
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    'License :: OSI Approved :: Python Software Foundation License',
    'Development Status :: 3 - Alpha',
    'perating System :: POSIX :: Linux',
    'Topic :: Internet',
    "Topic :: System :: Networking",
]

[project.urls]
"Homepage" = "https://github.com/kulongwangzhi85/flexidns.git"

[project.optional-dependencies]
uvloop = ["uvloop >= 0.17.0"]

[tool.setuptools]
platforms = ["x86_64"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
version = { attr = "FlexiDNS.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.data-files]
'bin' = ["src/flexidns"]
'etc/flexidns' = ['src/etc/flexidns/config.toml']
'lib/systemd/system' = ['flexidns.service']
'etc/flexidns/list' = [
    'src/etc/flexidns/list/anti-ad-domains.txt',
    'src/etc/flexidns/list/google-cn.txt',
    'src/etc/flexidns/list/apple-cn.txt',
    'src/etc/flexidns/list/direct-list.txt',
    'src/etc/flexidns/list/mydirect.txt',
    'src/etc/flexidns/list/mygfw.txt',
    'src/etc/flexidns/list/telegram.txt',
    'src/etc/flexidns/list/cloudflare.txt',
    'src/etc/flexidns/list/cn-all.txt',
    'src/etc/flexidns/list/proxy-list.txt',
    'src/etc/flexidns/list/greatfire.txt',
    'src/etc/flexidns/list/hosts',
]
