
[build-system]
requires = ["setuptools>=68.0", "wheel", "gitpython"]
# requires 是打包时的依赖，不是运行时或开发时的依赖
# 说明：本项目使用git commit id作为版本号，因此在打包时需要使用gitpython模块，而运行时未调用，因此无需使用pip安装到环境中
build-backend = "setuptools.build_meta"


[project]
name = "FlexiDNS"
dynamic = ["version", "readme", "dependencies"]
# 使用动态方式获取version

authors = [{ name = "GuoCL", email = "guochanglong85@gmail.com" }]
description = "a dns server in python"
license = { "text" = "GPL License" }
requires-python = ">=3.11"
classifiers = [
    'Programming Language :: Python :: 3.11',
    "Programming Language :: Python :: 3.12",
    'License :: OSI Approved :: Python Software Foundation License',
    'Development Status :: 3 - Alpha',
    'perating System :: POSIX :: Linux',
    'Topic :: Internet',
    "Topic :: System :: Networking",
]

[project.urls]
"Homepage" = "https://github.com/kulongwangzhi85/flexidns.git"

[project.optional-dependencies]
uvloop = ["uvloop >= 0.17.0"]

[tool.setuptools]
platforms = ["x86_64"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
version = { attr = "get_version.version" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.data-files]
'bin' = ["src/flexidns"]
'etc/flexidns' = ['src/etc/flexidns/config.toml']
'lib/systemd/system' = ['flexidns.service']
'etc/flexidns/list' = [
    'src/etc/flexidns/list/anti-ad-domains.txt',
    'src/etc/flexidns/list/google-cn.txt',
    'src/etc/flexidns/list/apple-cn.txt',
    'src/etc/flexidns/list/direct-list.txt',
    'src/etc/flexidns/list/mydirect.txt',
    'src/etc/flexidns/list/mygfw.txt',
    'src/etc/flexidns/list/telegram.txt',
    'src/etc/flexidns/list/cloudflare.txt',
    'src/etc/flexidns/list/cn-all.txt',
    'src/etc/flexidns/list/proxy-list.txt',
    'src/etc/flexidns/list/greatfire.txt',
    'src/etc/flexidns/list/hosts',
]
